--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header {
 
 #container {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 96% 1fr;
   gap: 30px;
   
   background-color: var(--fundo-principal);
