--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   font-family: Verdana;
 }
 
-:root {
+body.escuro {
   --fundo-principal: #222222;
   --texto: #e0e0e0;
   --texto-inverso: #333333;
